--- a/_config.yml
+++ b/_config.yml
@@ -19,20 +19,39 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Your awesome title
-email: your-email@example.com
+email: milankamilya@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: Milan_Kamilya
+github_username:  milankamilya
 
 # Build settings
-theme: minima
+theme: type-on-strap
+
 plugins:
   - jekyll-feed
+
+defaults:
+  - 
+    scope:
+      path: ""
+      type: "posts"
+    values:
+        layout: "post"
+        author: "Milan Kamilya"
+
+# List of Themes to choose from
+# https://github.com/daviddarnes/alembic 
+# https://github.com/mmistakes/jekyll-theme-basically-basic
+# https://sylhare.github.io/Type-on-Strap/
+# https://github.com/broccolini/swiss
+
+# PRO
+# http://jekyllthemes.org/themes/hydejack/
 
 # Exclude from processing.
 # The following items will not be processed, by default.
