--- a/_config.yml
+++ b/_config.yml
@@ -1,31 +1,12 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you: 
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+# SITE CONFIGURATION
+baseurl: ""
+url: "https://milankamilya.github.io"
 
-title: Your awesome title
-email: milankamilya@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+# THEME-SPECIFIC CONFIGURATION
+title: Milan Kamilya                                    # site's title
+description: "Personal website for resume & blog"      # used by search engines
+avatar: assets/img/avatar                              # Empty for no avatar in navbar
+#favicon: assets/favicon.ico                             # Icon displayed in the tab
 twitter_username: Milan_Kamilya
 github_username:  milankamilya
 
@@ -43,32 +24,45 @@ defaults:
     values:
         layout: "post"
         author: "Milan Kamilya"
+        permalink: "/blogs/:title"
 
-# List of Themes to choose from
-# https://github.com/daviddarnes/alembic 
-# https://github.com/mmistakes/jekyll-theme-basically-basic
-# https://sylhare.github.io/Type-on-Strap/
-# https://github.com/broccolini/swiss
+# Header and footer text
+header_text: Change <code>header_text</code> in <code>_config.yml</code>  # Change Blog header text
+header_feature_image: assets/img/pexels/triangular.jpeg
+footer_text: >
+  Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
+# Blog
+excerpt: true                                           # Or "truncate" (first 250 characters), "false" to disable
+post_navigation: true
+color_image: /assets/img/lineart.png                    # A bit transparent for color posts.
 
-# PRO
-# http://jekyllthemes.org/themes/hydejack/
+# Features
+katex: true                                             # Enable if using math markup
+#google_analytics:                                       # Tracking ID, e.g. "UA-000000-01"
+disqus_shortname: disqus_VuIGNG1hoD                                       # Your discus shortname for comments
+#layout_variables:                                       # Open the "_sass > base" folder, and open "_variables.scss"
+#footer_icons:                                           # In _data/social.yml
+#share_buttons:                                          # In _data/social.yml
+#authors:                                                # In _data/authors.yml
+#language:                                               # In _data/language.yml
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+# PAGINATION
+paginate: 5
+paginate_path: "blog/page:num"
+
+# PORTFOLIO
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:name
+
+# BUILD SETTINGS
+markdown: kramdown
+highlighter: rouge
+sass:
+  sass_dir: _sass
+  style: :compressed
+
+
+# theme: type-on-strap                                  # if using the theme as a jekyll theme gem
+remote_theme: sylhare/Type-on-Strap
