--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Milan Kamilya
 description: personal github page for resume, blogs
 # baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://localhost:4000" #"https://milankamilya.github.io" 
+url: "https://milankamilya.github.io" 
 
 # User settings
 username: Milan Kamilya
